menu item hovering

--- a/custom.css
+++ b/custom.css
@@ -71,6 +71,31 @@ aside p {
 .bolts {
     color: white;
     margin-right: 20px;
+    border-radius: 40px;
+    outline: none;
+    padding: 10px 16px;
+    background-color: #68eb9f;
+    cursor: pointer;
+    font-size: 18px;
+}
+/* unvisited link */
+a:link {
+  color: rgb(255, 255, 255);
+}
+
+/* visited*/
+a:visited {
+  color: rgb(255, 249, 249);
+}
+
+/* mouse over link */
+a:hover {
+  color: rgb(56, 234, 247);
+}
+/*colour change in hovering menu item*/
+.active, .bolts:hover {
+  background-color: #ff63dd;
+  color: rgb(183, 9, 252);
 }
 input {
   background-color: rgb(231 234 236);;
