--- a/style/custom.css
+++ b/style/custom.css
@@ -77,12 +77,12 @@ aside p {
   margin-top: 0px;
 }
 .bolts {
-    color: white;
+    color: #134E4A;
     margin-right: 20px;
     border-radius: 40px;
     outline: none;
     padding: 10px 16px;
-    background-color: #68eb9f;
+    background-color: #CCFBF1;
     cursor: pointer;
     font-size: 18px;
 }
@@ -98,11 +98,14 @@ a:hover {
 }
 /*focus menu colour change*/
 .active, .academics, .arts, .sports {
-  background-color: #1dcaad;
-  color: #68eb9f;
+  background-color: #134E4A;
+  color: #CCFBF1
 }
 input {
-  background-color:rgb(44, 67, 87);;
+  background-color: #FFFFFF;
+  border: 1px solid #ced4da;
+  border-radius: 0.375rem;
+  box-shadow: rgb(0 0 0 / 0%) 0px 0px 0px 0px, rgb(0 0 0 / 0%) 0px 0px 0px 0px, rgb(39 39 42 / 5%) 0px 4px 6px -1px, rgb(39 39 42 / 5%) 0px 2px 4px -2px;
 }
 .required:after {
     content:" *";
