--- a/style/custom.css
+++ b/style/custom.css
@@ -101,9 +101,7 @@ a:hover {
   background-color: #134E4A;
   color: #CCFBF1
 }
-.textarea,.comments,.select,.input {
-  background-color: #FFFFFF;
-  border: 1px solid #ced4da;
+.input {
   border-radius: 0.375rem;
 }
 .required:after {
