--- a/style/custom.css
+++ b/style/custom.css
@@ -84,6 +84,9 @@ aside p {
 .mt-0 {
   margin-top: 0px;
 }
+.bolts:focus{
+    color: #134E4A;
+}
 .bolts {
     color: #134E4A;
     margin-right: 20px;
