--- a/style/custom.css
+++ b/style/custom.css
@@ -91,7 +91,7 @@ aside p {
   width: 1px;
   height: 1px;
   overflow: hidden;
-  background-color: #134E4A;
+  background-color: #ff0000;
   color: #CCFBF1;
 }
 input:focus{
