--- a/style/custom.css
+++ b/style/custom.css
@@ -84,13 +84,12 @@ aside p {
 .mt-0 {
   margin-top: 0px;
 }
-.skip{
-  position: absolute;
-  left: -10000px;
-  top: auto;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
+.skip:focus{
+  position: static;
+  
+  width: auto;
+  height: auto;
+ 
   background-color: #ff0000;
   color: #CCFBF1;
 }
