--- a/style/custom.css
+++ b/style/custom.css
@@ -84,12 +84,13 @@ aside p {
 .mt-0 {
   margin-top: 0px;
 }
-.skip:focus{
-  position: static;
-  
-  width: auto;
-  height: auto;
- 
+.skip{
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
   background-color: #ff0000;
   color: #CCFBF1;
 }
