--- a/style/custom.css
+++ b/style/custom.css
@@ -84,16 +84,17 @@ aside p {
 .mt-0 {
   margin-top: 0px;
 }
-.skip:focus{
+.skip{
   position: absolute;
   left: -10000px;
   top: auto;
   width: 1px;
   height: 1px;
   overflow: hidden;
-  background-color: #ff0000;
-  color: #00b68e;
+  background-color: #134E4A;
+  color: #CCFBF1;
 }
+
 input:focus{
   background-color: #00a398;
 
