--- a/style/custom.css
+++ b/style/custom.css
@@ -99,6 +99,8 @@ aside p {
   position: static;
   width: auto;
   height: auto;
+  background-color: #134E4A;
+  color: #CCFBF1;
 }
 
 input:focus{
