--- a/style/custom.css
+++ b/style/custom.css
@@ -141,6 +141,9 @@ a:hover {
 .input {
   border-radius: 0.375rem;
 }
+a, input{
+  cursor: pointer;
+}
 .required:after {
     content:" *";
     color: red;
